# lambda-replacement

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/csv/: repositories_cpp.csv  repositories_cpp_sample.csv  repositories_cpp_sample_acc.csv  repositories_csharp.csv  repositories_csharp_sample.csv  repositories_csharp_sample_acc.csv  repositories_java.csv  repositories_java_sample.csv  repositories_java_sample_acc.csv  repositories_javascript_sample.csv  repositories_javascript_sample_acc.csv  repositories_php.csv  repositories_php_sample.csv  repositories_php_sample_acc.csv  repositories_ruby.csv  repositories_ruby_sample.csv  repositories_ruby_sample_acc.csv
data/pickle/: repositories_cpp.pkl  repositories_cpp_sample.pkl  repositories_cpp_sample500.pkl  repositories_cpp_sample_acc.pkl  repositories_csharp.pkl  repositories_csharp_sample.pkl  repositories_csharp_sample500.pkl  repositories_csharp_sample_acc.pkl  repositories_java.pkl  repositories_java_sample.pkl  repositories_java_sample500.pkl  repositories_java_sample_acc.pkl  repositories_javascript_sample.pkl  repositories_javascript_sample500.pkl  repositories_javascript_sample_acc.pkl  repositories_php.pkl  repositories_php_sample.pkl  repositories_php_sample500.pkl  repositories_php_sample_acc.pkl  repositories_ruby.pkl  repositories_ruby_sample.pkl  repositories_ruby_sample500.pkl  repositories_ruby_sample_acc.pkl
data/rq4/: cpp.csv  java.csv  (+4 more)
notebooks/: rq1.ipynb  rq2.ipynb  rq3.ipynb  rq4.ipynb
(+1042 files in other folders)
